src/test/ui/codemap_tests/issue-28308.stderr
error[E0600]: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/issue-28308.rs:12:5
   |
LL |     assert!("foo");
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0600"
